[COLOR="DeepSkyBlue"]2.7.2 (32)[/COLOR]:
[LIST]
[*] Corrected the text for Home Storage Chests in German thanks to report by AlbertVonMoosseedorf.
[/LIST]

[COLOR="DeepSkyBlue"]2.7.1 (31)[/COLOR]:
[LIST]
[*] Parameter values "mythic" or "orange" for the function [COLOR="MediumSeaGreen"]quality()[/COLOR] now really does allow you to check if items are mythic quality. (Finally got a mythic item to test with!)
[/LIST]

[COLOR="DeepSkyBlue"]2.7 (30)[/COLOR]:
COLOR="MediumSlateBlue"]Enhancement[/COLOR]
[LIST]
[*] New parameter values "mythic" or "orange" for the function [COLOR="MediumSeaGreen"]quality()[/COLOR] allows you to check if items are mythic quality. 
[/LIST]

[COLOR="DeepSkyBlue"]2.6 (29)[/COLOR]:
COLOR="MediumSlateBlue"]Enhancement[/COLOR]
[LIST]
[*] New function [COLOR="MediumSeaGreen"]istreasure()[/COLOR] allows you to check if items are considered Treasure (i.e. random junk that you can sell for good money). 
[/LIST]

[COLOR="DeepSkyBlue"]2.5 (28)[/COLOR]:
[LIST]
[*] Updated the ITEM_QUALITY_ values to correspond to the change to ITEM_DISPLAY_QUALITY_ values that was brought in by Greymoor.
[/LIST]

[COLOR="DeepSkyBlue"]2.4.6 (27)[/COLOR]:
[LIST]
[*] API bump.
[/LIST]

[COLOR="DeepSkyBlue"]2.4.5 (26)[/COLOR]:
[LIST]
[*] Added Russian language strings courtesy of Ckau.
[/LIST]

[COLOR="DeepSkyBlue"]2.4.4 (25)[/COLOR]:
[LIST]
[*] Set up the character default settings to the same as the account-wide default settings.
[*] Add in minimum version checking for UnknownTracker.
[*] Removed version checking for a library that we don't even use.
[/LIST]

[COLOR="DeepSkyBlue"]2.4.3 (24)[/COLOR]:
[LIST]
[*] Add in predefined rules for UnknownTracker integration plugin.
[/LIST]

[COLOR="DeepSkyBlue"]2.4.2 (23)[/COLOR]:
[LIST]
[*] Remove annoying debug printout.
[/LIST]

[COLOR="DeepSkyBlue"]2.4.1 (22)[/COLOR]:
[LIST]
[*] Fix problem with isunknown() returning false where none of the toons knew the item.
[*] Fix addon version.
[/LIST]
